windows scrollbar fix

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -193,8 +193,9 @@ header.show .logo, header.show form input{
 
 	position: fixed;
 	top: 0;
-
-	overflow: scroll;
+	
+	overflow-x: hidden; 
+	overflow-y: auto;
 }
 
 #appList{
